# llm_backend

./: .env.example  .gitignore  README.md  alembic.ini  dockerfile  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 1c48bd2274ea_add_chat_table.py  1e9780771a87_create_raw_texts_table.py  20260318_033231_create_users_table.py  20260324_034501_add_chat_table.py  20260324_050909_create_raw_texts_table.py  20260324_083000_expand_raw_text_column_to_longtext.py  20260405_000000_add_projects_and_rooms_to_chat.py  20260405_010000_add_rag_metadata_to_chat_messages.py  2f6f5f3d9c21_add_chunk_text_to_chunks.py
docs/: almeric.md  api.md
src/: main.py
src/core/: config.py  db.py  models.py
src/modules/chat/: schema.py
src/modules/chat/domain/: entities.py
src/modules/chat/infrastructure/: models.py  rag_context_provider.py  repository.py
src/modules/chat/interface/: router.py
src/modules/chat/services/: context_provider.py
src/modules/chat/usecase/: send_message.py
src/modules/rag/: readme.md
src/modules/rag/api/: rag_controller.py  rag_schema.py
src/modules/rag/infrastructure/: embedder_factory.py  embedding_gateway.py  hash_embedder.py  liteparse_parser.py  qdrant_vector_store.py  rag_query_service.py  sentence_transformer_embedder.py
src/modules/rag/models/: chunk.py  raw_text.py  retrieved_chunk.py  upload_file.py
src/modules/rag/repositories/: chunk_repository.py  raw_text_repository.py  vector_store_repository.py
src/modules/rag/services/: chunker.py  embedder.py  (+3 more)
src/shared/llm/: base.py  factory.py  local_client.py  openai_client.py
(+16 files in other folders)
